# smf-clawless-orchestrator

./: AGENTS.md  README.md  conftest.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clawmes/: __init__.py  agent.py  aggregate.py  bus.py  cli.py  config.py  governance.py  llm.py  memory.py  observability.py  onboard.py  profiles.py  providers.py  spawner.py  supervisor.py  tui.py
tests/: test_governance.py  test_memory.py  test_onboard.py  test_spawner.py  test_tui.py
