[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmes-orchestrator"
version = "0.1.0"
description = "Hybrid OpenClaw + Hermes framework with dynamic sub-agent swarm spawning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SMF Works" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
clawmes = "clawmes.cli:main"

[tool.setuptools]
packages = ["clawmes"]
